<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="horizontal"
    android:padding="@dimen/padding"
    android:stretchColumns="1">

    <TableRow android:layout_marginBottom="@dimen/margin_half">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/colorAccent"
            tools:ignore="RtlHardcoded"
            tools:text="163 638" />
    </TableRow>

    <TableRow android:layout_marginBottom="@dimen/margin_half">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestamp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            tools:text="2/2/2020, 5:08:00 PM GMT+1" />
    </TableRow>

    <TableRow android:layout_marginBottom="@dimen/margin_half">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactions"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            tools:text="3524" />
    </TableRow>

    <TableRow android:layout_marginBottom="@dimen/margin_half">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_and_unit"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            tools:text="1252.554" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_and_unit"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"
            tools:text="1252.554" />
    </TableRow>
</TableLayout>